--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -57,6 +57,7 @@ header {
       .profile {
         display: flex;
         align-items: center;
+        gap: 10px;
         li {
           img {
             width: 30px;
@@ -65,6 +66,14 @@ header {
           }
           &::before {
             display: none;
+          }
+          button {
+            border: none;
+            cursor: pointer;
+            background: #053354;
+            color: #fff;
+            padding: 0.3rem 0.6rem;
+            border-radius: 20px;
           }
         }
       }
@@ -95,15 +104,27 @@ header {
 
     .inputs {
       display: flex;
-      gap: 0.5rem;
+      gap: 1.5rem;
+      align-items: center;
       .input-box {
         position: relative;
         width: 300px;
+        position: relative;
+        .hide-ripple {
+          height: 90px;
+          position: relative;
+          width: 100%;
+        }
         input {
           border: 1px solid rgb(75, 170, 194);
           outline: none;
           border-radius: 1rem;
           padding: 0.6rem 0.8rem;
+          width: 100%;
+          position: absolute;
+          left: 50%;
+          top: 80%;
+          transform: translate(-50%, -50%);
           width: 100%;
         }
 
