--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
             <img src="Icons/Vector.svg" alt="" />
             <img src="Icons/Vector.svg" alt="" />
           </div>
-          <a routerLink="/user-profile">მიღებაზე ჩაწერა</a>
+          <a [routerLink]="'/user/' + doctor.id">მიღებაზე ჩაწერა</a>
         </div>
       </div>
     </div>
