--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "../node_modules/@syncfusion/ej2-material-theme/styles/material.css";
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
 
 html,
