add doctors page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="header-box">
       <ul>
-        <li>
+        <li *ngIf="this.userServiceService.myUser.role === 'admin'">
           <a routerLink="/doctors" routerLinkActive="active-link">ექიმები</a>
         </li>
         <li>
