--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
       </ul>
     </div>
     <div class="get-doctors">
-      <div class="get-doctors-box" *ngFor="let doctor of dictors">
+      <div class="get-doctors-box" *ngFor="let doctor of doctors">
         <div class="images">
           <img [src]="'data:image/jpeg;base64,' + doctor.photo" alt="" />
         </div>
