--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -95,10 +95,11 @@
         padding: 10px;
         .images {
           img {
-            width: 140px;
-            height: 140px;
+            width: 150px;
+            height: 150px;
             object-fit: cover;
             border-radius: 50%;
+            object-position: center top;
           }
         }
         .desc {
