add user edit and delete

--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -54,6 +54,7 @@
         </div>
       </div>
       <div class="forget-password"><span>პაროლის აღდგენა</span></div>
+      <p-progressSpinner ariaLabel="loading" *ngIf="isSpinner" />
       <div class="sign-in-btn"><button type="submit">შესვლა</button></div>
     </form>
   </div>
