--- a/src/app/authorization/authorization.component.scss
+++ b/src/app/authorization/authorization.component.scss
@@ -13,7 +13,6 @@
   align-items: center;
   .sign-in {
     width: 40%;
-    height: 350px;
     background: #fff;
     color: #000;
     border-radius: 20px;
@@ -41,6 +40,13 @@
           color: #053354;
           font-size: 15px;
           font-weight: 600;
+        }
+      }
+      .p-element {
+        .p-progress-spinner {
+          width: 10px !important;
+          height: 10px !important;
+          margin-top: 4rem;
         }
       }
     }
