--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import "../node_modules/@syncfusion/ej2-material-theme/styles/material.css";
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 
 html,
 body {
@@ -13,4 +15,8 @@ body {
 .mdc-text-field--filled:not(.mdc-text-field--disabled)
   .mdc-line-ripple::before {
   border-bottom: none;
+}
+.p-progress-spinner {
+  width: 50px !important;
+  height: 50px !important;
 }
