--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -25,6 +25,7 @@ header {
     .header-box {
       display: flex;
       align-items: center;
+      gap: 1rem;
       ul {
         list-style-type: none;
         display: flex;
