--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -85,7 +85,7 @@
         padding: 8px;
         text-align: center;
         position: relative;
-
+        width: 200px;
         &:first-child {
           font-weight: bold; // Make the first column bold for row labels
         }
