--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -96,6 +96,40 @@
           left: 0;
           cursor: no-drop;
         }
+        .my-booked {
+          z-index: 3;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: #fff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            width: 10px;
+            height: 10px;
+            cursor: pointer;
+          }
+          span {
+            top: 20px;
+            color: #3acf99;
+          }
+        }
+        .free-place {
+          z-index: 1;
+          width: 100%;
+          height: 100%;
+          background-color: #cfdbe4;
+          position: absolute;
+          cursor: pointer;
+          top: 0;
+          left: 0;
+        }
       }
 
       th {
@@ -131,6 +165,36 @@
           font-weight: 100;
         }
       }
+    }
+  }
+}
+.booking-remove {
+  background: #ffff;
+  width: 300px;
+  padding: 1rem 2rem;
+  position: fixed;
+  right: 2rem;
+  bottom: 5rem;
+  display: flex;
+  gap: 4rem;
+  button {
+    background: #ff93a6;
+    color: #fff;
+    padding: 0.8rem 1.6rem;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+  }
+  .remove {
+    position: relative;
+    width: 100%;
+    img {
+      position: absolute;
+      left: 10px;
+      top: 10px;
+      width: 10px;
+      height: 10px;
+      cursor: pointer;
     }
   }
 }
