fix: fix update book bugs

--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -3,6 +3,7 @@
   *ngIf="authScreenService.isSignin"
   (click)="onAuthorizationClick($event)"
 >
+  <p-toast />
   <div class="sign-in" *ngIf="authScreenService.isSignin">
     <form
       [formGroup]="signInForm"
