--- a/src/app/doctor-sign-up/doctor-sign-up.component.html
+++ b/src/app/doctor-sign-up/doctor-sign-up.component.html
@@ -1,4 +1,5 @@
 <div class="sign-up">
+  <p-toast />
   <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
     <div>
       <div class="input-box">
