--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,5 @@
 <div class="my-profile">
+  <p-toast />
   <div class="my-info">
     <div class="image">
       <img src="/Images/Profile.png" alt="" *ngIf="user?.photo == null" />
