--- a/src/app/edit-doctor/edit-doctor.component.html
+++ b/src/app/edit-doctor/edit-doctor.component.html
@@ -1,4 +1,5 @@
 <div class="sign-up">
+  <p-toast />
   <div class="doctor-photo">
     <img
       [src]="'data:image/jpeg;base64,' + photo"
@@ -50,7 +51,7 @@
     <div>
       <div class="input-box">
         <label for="email">მეილი:</label>
-        <input id="email" formControlName="email" />
+        <input id="email" [value]="signUpForm.get('email').value" readonly />
       </div>
       <div
         *ngIf="
@@ -150,8 +151,4 @@
       <button type="submit">შეცვლა</button>
     </div>
   </form>
-
-  <span *ngIf="message !== null" style="color: red">
-    {{ message }}
-  </span>
 </div>
