--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
 <div class="my-profile">
+  <p-toast />
   <div class="my-info">
     <div class="image">
       <img
@@ -91,7 +92,6 @@
               (dragover)="allowDrop($event)"
             ></div>
 
-            <!-- The my-booked div that will be dragged and dropped -->
             <div
               *ngIf="isDayBooked(col.day, row) as bookingId"
               class="my-booked"
